--- a/angular.json
+++ b/angular.json
@@ -23,9 +23,13 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/assets/Js/colorize.js",
+              "src/assets/Js/colorPicker.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -90,9 +94,13 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/assets/Js/colorize.js",
+              "src/assets/Js/colorPicker.js"
+            ]
           }
         }
       }
