implement move button toggle

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@syncfusion/ej2-angular-inputs": "^20.3.57-ngcc",
     "font-awesome": "^4.7.0",
     "ngx-color-picker": "^13.0.0",
+    "perfect-freehand": "^1.2.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
