--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^14.2.0",
     "@syncfusion/ej2-angular-inputs": "^20.3.57-ngcc",
     "font-awesome": "^4.7.0",
+    "konva": "^8.3.14",
     "ngx-color-picker": "^13.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
